--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -179,6 +179,12 @@ input, select, textarea {
 		text-align: justify;
 		margin: 0 0 2rem 0;
 	}
+    
+    #color-highlight{
+        color: red;
+	}
+
+
 
 	h1, h2, h3, h4, h5, h6 {
 		font-family: "Source Sans Pro", Helvetica, sans-serif;
@@ -4687,3 +4693,4 @@ input, select, textarea {
 		}
 
 	}
+	
